--- a/01-SVG/index.html
+++ b/01-SVG/index.html
@@ -1,37 +1,57 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <script src="js/script.js" async></script>
 
-    <title>1-SVG</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <script src="js/script.js" async></script>
 
-    <h1>Dessiner des formes</h1>
-    <h2>Rectangle</h2>
+  <title>1-SVG</title>
+</head>
 
-    <h2>Donut</h2>
+<body>
 
+  <h1>Dessiner des formes</h1>
+  <h2>Rectangle</h2>
+  <svg>
+    <rect width="400" height="100" fill="red" />
+  </svg>
 
-    <h2>Ligne</h2>
-
-
-    <h2>Path</h2>
-
-
-    <h1>Animer des formes</h1>
-
-    <h2>On click</h2>
-
-    <h2>On hover</h2>
-
-    <h2>Prenez la première lettre de votre prénom que vous avez créée ci-dessus. Faite bouger une forme de votre choix le long de la lettre</h2>
+  <h2>Donut</h2>
+  <svg>
+    <circle cx="50" cy="50" r="60" fill="none" stroke="black" />
+    <circle cx="50" cy="50" r="30" fill="none" stroke="black" />
+  </svg>
 
 
-  </body>
+  <h2>Ligne</h2>
+  <svg>
+    <path d="M 20 50 L 31.76 108.8" stroke="black" />
+  </svg>
+  <h2>Path</h2>
+  <p>Afficher le prénom complet a été possible grâce à un redimensionnement de la balise <em>svg</em></p>
+  <svg>
+    <path
+      d="M 0 50 V 0 H 50 V 25 H 0 M 60 50 V 0 H 110 V 50 M 110 25 H 60 M 120 0 H 170 M 145 0 V 50 M 180 50 V 0 H 230 V 25 H 180 L 230 50 M 245 50 V 15 M 245 8 V 0 M 310 0 H 260 V 50 H 310 M 320 0 V 50 M 370 0 L 320 25 L 370 50 "
+      stroke="black" fill="none"></path>
+  </svg>
+  <h1>Animer des formes</h1>
+
+  <h2>On click</h2>
+
+  <!-- Voir JS -->
+
+  <h2>On hover</h2>
+
+  <!-- Voir JS -->
+
+  <h2>Prenez la première lettre de votre prénom que vous avez créée ci-dessus. Faite bouger une forme de votre choix
+    le
+    long de la lettre</h2>
+
+
+</body>
+
 </html>
