--- a/04-gapminder/public/index.html
+++ b/04-gapminder/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>03-d3-data</title>
+    <title>04-gapminder</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
 </head>
-<body>
 
+<body>
+    <script type="module" src="../src/index.js"></script>
 
 </html>
